--- a/src/chrome extension/popup.html
+++ b/src/chrome extension/popup.html
@@ -112,8 +112,8 @@ form input.text {
 	key = window.localStorage.getItem( "logged_in" );
 	new_user = window.localStorage.getItem( "new_user" );
 
-	PREFSTORE = //"http://ec2-79-125-74-77.eu-west-1.compute.amazonaws.com:8080/";
-	"http://localhost:8080/";
+	PREFSTORE = "http://ec2-79-125-74-77.eu-west-1.compute.amazonaws.com:8080/";
+	//"http://localhost:8080/";
 
 	/**
 	 * Main function for the page. Also used for a 'refresh'
