Added bit of margin to bottom of popup.

--- a/src/chrome extension/popup.html
+++ b/src/chrome extension/popup.html
@@ -164,7 +164,7 @@
 		<span id="loggedOutMsg">Please login using one of:</span>
 	</div>
 
-	<div id="loggedOutBox" style="float:left; width:170px; margin-top:5px;" >
+	<div id="loggedOutBox" style="float:left; width:170px; margin-top:5px; margin-bottom:10px;" >
 		<a id="google" class="openid_out" href="javascript:login('google')">	
 			<img 
 				onmouseover="google.className='openid_over'"
